# SilkEngine

./: CMakeLists.txt  CMakePresets.json  Engine.cpp  README.md  main.cpp  vcpkg.json
engine/: ECS.h  Engine.cpp  Engine.h  Transform.cpp  Transform.h
examples/: CMakeLists.txt  main.cpp
examples/ducky/: CMakeLists.txt  main.cpp
examples/ducky/shaders/: shader.frag  shader.vert
examples/model/: bunny.gltf
examples/paint/: CMakeLists.txt  main.cpp
examples/shaders/: shader.frag  shader.vert
include/silk/: ECS.h  Engine.h
src/: Engine.cpp  Transform.cpp
tests/: CMakeLists.txt  ecs_test.cpp
